<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.sdu.mmmi.ap.g17.rflr.InGameActivity">

    <TextView
        android:id="@+id/last_call_label"
        android:text="@string/lift_labeltxt"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintHorizontal_bias="0.147" />
    
    <TextView
        android:id="@+id/last_call_value_label"
        android:text="@string/last_call_labeltxt"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/last_call_label"
        tools:layout_editor_absoluteY="2dp"
        android:layout_marginLeft="-294dp" />
    
    <Button
        android:id="@+id/lift_btn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginRight="100dp"
        android:onClick="liftBtnHandler"
        android:text="@string/in_game_lift_btntxt"
        app:layout_constraintLeft_toRightOf="@+id/last_call_value_label"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="2dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
    android:id="@+id/hide_show_btn"
    android:layout_width="344dp"
    android:layout_height="0dp"
        android:onClick="hideShowDiceBtnHandler"
    android:text="@string/in_game_hide_btntxt"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/make_guess_btn"
        android:layout_width="344dp"
        android:layout_height="0dp"
        android:onClick="makeGuessBtnHandler"
        android:text="@string/in_game_make_guess_btntxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hide_show_btn" />

    <TextView
        android:id="@+id/number_of_dice_label"
        android:text="@string/in_game_number_of_dice_spinner_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/make_guess_btn"
        android:layout_marginStart="42dp" />

    <TextView
        android:id="@+id/die_eyes_label"
        android:text="@string/in_game_die_eyes_spinner_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginLeft="42dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/number_of_dice_spinner"
        android:layout_marginStart="42dp" />

    <Spinner
        android:id="@+id/number_of_dice_spinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/number_of_dice_label"
        app:layout_constraintBottom_toTopOf="@+id/make_guess_btn"/>

    <Spinner
        android:id="@+id/die_eyes_spinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@+id/die_eyes_label"
        app:layout_constraintBottom_toTopOf="@+id/number_of_dice_spinner"/>

    <GridView
        android:id="@+id/image_grid_view"
        android:layout_width="344dp"
        android:layout_height="339dp"
        android:layout_marginTop="32dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lift_btn"
        app:layout_constraintBottom_toTopOf="@+id/die_eyes_label" />


</android.support.constraint.ConstraintLayout>
